fix spacing

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -20,7 +20,6 @@ table {
 
 header {
 	margin-top: 10px;
-	margin-bottom:10%;
 }
 
 .search {
